--- a/style.css
+++ b/style.css
@@ -61,3 +61,17 @@ a:hover {
 .resume-btn:hover {
   background-color: #005e99;
 }
+.social-icons {
+  margin-top: 20px;
+}
+
+.social-icons img {
+  width: 40px;
+  height: 40px;
+  margin: 0 10px;
+  transition: transform 0.3s ease;
+}
+
+.social-icons img:hover {
+  transform: scale(1.2);
+}
