--- a/style.css
+++ b/style.css
@@ -74,4 +74,10 @@ a:hover {
   transform: scale(1.15);
   opacity: 1;
 }
+.icon {
+  width: 22px;
+  height: 22px;
+  vertical-align: middle;
+  margin-right: 8px;
+}
 
